@@ -186,6 +186,8 @@ Release 0.21.0 - Unreleased
                (Gary Helmling via Lars George)
    HBASE-2150  Deprecated HBC(Configuration) constructor doesn't call this()
    HBASE-2154  Fix Client#next(int) javadoc
+   HBASE-2152  Add default jmxremote.{access|password} files into conf
+               (Lars George and Gary Helmling via Stack)
 
   IMPROVEMENTS
    HBASE-1760  Cleanup TODOs in HTable
